Реализована глобальная атомарность правок (multi-file batching) в EditFileTool, добавлена автоматическая сортировка операций для стабильности индексов